cambios para deploy en heroku

--- a/package.json
+++ b/package.json
@@ -4,16 +4,16 @@
   "description": "Api de Portafolio",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ."
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "express": "^4.17.1",
-    "mysql": "^2.18.1"
+    "nodemon": "^2.0.4"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
-    "nodemon": "^2.0.4"
+    "express": "^4.17.1",
+    "mysql": "^2.18.1"
   }
 }
